# auth_service

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  main.py  pyproject.toml
app/: .env.example  Dockerfile  alembic.ini  pyproject.toml
app/api/: main.py  middleware.py
app/api/users/: router.py  schemas.py
app/common/: exceptions.py  schemas.py  utils.py
app/domain/entities/: base.py  enums.py  users.py
app/domain/events/: base.py  users.py
app/domain/exceptions/: base.py  users.py
app/domain/values/: base.py  users.py
app/infra/common/: utils.py
app/infra/common/users/: utils.py
app/infra/converters/: users.py
app/infra/db/: db_config.py
app/infra/db/migrations/: env.py
app/infra/db/migrations/versions/: 2024_07_21_1920-97098f0c1a72_.py  2024_07_21_1923-e66a00534fe2_.py  2024_07_22_1532-82e08418ffb2_.py  2024_07_23_0753-98433862dfa1_.py  53e0bd85cbe2_first.py
app/infra/db/models/: base.py  users.py
app/infra/db/repositories/: sql_aclhemy_base.py  uow.py
app/infra/db/repositories/users/: base.py  get_user_service.py  sql_aclhemy.py
app/infra/exceptions/: base.py  exceptions_token.py  token.py  users.py
app/infra/filters/: users.py
app/infra/s3/: client.py
app/infra/services/token/: jwt.py
app/infra/smtp_service/: email_schema.py  email_template.html  main.py
app/infra/task_iq/: broker.py  tasks.py
app/logic/: container.py  mediator.py
app/logic/commands/: base.py  users.py
app/logic/commands/users/: commands.py  handlers.py
app/logic/events/: base.py  users.py
app/logic/mediator/: command_mediator.py  main_mediator.py
app/logic/queries/: base.py  users.py
app/settings/: config.py
app/tests/domain/: test_users.py
app/tests/domain/entities/: test_users.py
app/tests/domain/values/: test_users.py
