[tool.poetry]
name = "ddd-authorize"
version = "0.1.0"
description = ""
authors = ["Ant1dot7 <fybrby98@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
passlib = "^1.7.4"
ipython = "^8.26.0"
pydantic = "^2.8.0"
email-validator = "^2.2.0"
punq = "^0.7.0"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
orjson = "^3.10.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
factory-boy = "^3.3.0"
memory-profiler = "^0.61.0"
pyinstrument = "^4.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ['ignore::_pytest.warning_types.PytestAssertRewriteWarning', "ignore::DeprecationWarning"]
asyncio_mode='auto'