[tool.poetry]
name = "ddd-authorize"
version = "0.1.0"
description = ""
authors = ["Ant1dot7 <fybrby98@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
passlib = "^1.7.4"
ipython = "^8.26.0"
pydantic = "^2.8.0"
email-validator = "^2.2.0"
punq = "^0.7.0"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
orjson = "^3.10.6"
pyjwt = "^2.8.0"
aiobotocore = "^2.13.1"
aiosmtplib = "^3.0.1"
taskiq = {extras = ["reload"], version = "^0.11.6"}
taskiq-redis = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
factory-boy = "^3.3.0"
memory-profiler = "^0.61.0"
pyinstrument = "^4.6.2"
pre-commit = "^3.7.1"
isort = "^5.13.2"
flake8 = "^7.1.0"
ruff = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ['ignore::_pytest.warning_types.PytestAssertRewriteWarning', "ignore::DeprecationWarning"]
asyncio_mode='auto'



[tool.isort]
multi_line_output=3
include_trailing_comma=true
line_length=120
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=4 # кол-во импортов в строке
src_paths=["app", ]
skip_glob=[
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
    "migrations",
]
known_fastapi=["fastapi",]
known_first_party=["app"]
sections=[
    "FUTURE",
    "STDLIB",
    "FASTAPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.ruff]
target-version = "py312"

# Включение авто исправления по умолчанию
fix = false

# Ограничение длины строки
line-length = 120

# Включенные плагины
lint.select = [
    "T20", # flake8-print
    "UP007", # not use Optional
    "UP006", # not use List as type
    "PLC2401", # non-ascii-name
    "PLC2403", # non-ascii-import-name
    "TID252", # absolute imports
    "B006",  #mutable data structures for argument defaults

    "F", # pyflakes
    "W", # pycodestyle warnings
    "UP", # pyupgrade
    "C90", # mccabe
    "N", # pep8-naming
    "DJ", # flake8-django
    "C4", # flake8-comprehensions
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "Q", # flake8-quotes

]
exclude = [
    "eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".tox",
    ".venv",
    ".pyc",
    ".pyi",
    "_build",
    "buck-out",
    "build",
    "dist",
    "app/infra/db/migrations",
    "data",
    "**__init__.py",

]

lint.ignore = ["B024", "T201", "N818", "B904", "B008", "UP042"]